--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <link rel="stylesheet" type="text/css" href="/src/assets/base.css" />
   </body>
 </html>
